MODDICONV-429: Upgrade module to Vert.x 5.0 (#84)
* MODDICONV-429: Upgrade module to Vert.x 5.0
* fix warning: Mockito is currently self-attaching to enable the inline-mock-maker. This will no longer work in future releases of the JDK.